# realtime-ai-assistant

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MVP_ROADMAP.md  README.md  REVIEW.md  TEST_RESULTS.md  TRIAGE-SPRINT3.md  TRIAGE.md  pyproject.toml  release-please-config.json  requirements.txt  user_stories.json  user_stories.md
.github/workflows/: ci.yml  pr-title.yml  release-please.yml
src/realtime_ai_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/realtime_assistant/: __init__.py  audio.py  config.py  confluence_client.py  coverage.py  dashboard.py  events.py  export.py  jira_client.py  llm.py  logging.py  main.py  memory.py  models.py  notifications.py  prompts.py  server.py  tools.py  transcript.py
tests/: conftest.py  test_audio.py  test_config.py  test_confluence.py  test_coverage.py  test_dashboard.py  test_dedup.py  test_events.py  test_export.py  test_jira_client.py  test_llm.py  test_memory.py  test_models.py  test_notifications.py  test_prompts.py  test_realtime_reconnect.py  test_session_persistence.py  test_speaker_stream.py  test_summary.py  test_tool_jira.py  test_tools.py  test_transcript.py  test_voice_mode.py
